# Adhikar

./: README.md  docker-compose.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/pages/: Law.dart  emergency.dart  filters.dart  forms.dart  home.dart  page2.dart  page4.dart  profile.dart
app/lib/utils/: colors.dart
app/linux/: CMakeLists.txt  my_application.cc
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  chat.py  generate_quiz.py  main.py  prompts.py  pyproject.toml  requirements.txt  summarize.py  test.py  utils.py
next-auth/: .env.example  auth.config.ts  next-auth.d.ts  package-lock.json  package.json
next-auth/actions/: password.ts  reset.ts
next-auth/app/: globals.css
next-auth/lib/: tokens.ts
web/: README.md  auth.ts  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  routes.ts
web/actions/: login.ts  register.ts  settings.ts
web/app/: layout.tsx  page.tsx
web/components/: MarkdownRenderer.tsx  app-store-section.tsx  features-section.tsx  footer.tsx  hero-section.tsx  navigation.tsx  testimonials-section.tsx  user-info.tsx  users-section.tsx
web/data/: two-factor-confirmation.ts
web/lib/: mail.ts
web/prisma/: schema.prisma
web/schemas/: index.ts
webb/: package-lock.json
webb/components/: faq-section.tsx  stats-section.tsx  testimonials-section.tsx
(+53 files in other folders)
